src-tauri/check_output.txt
   Compiling hcg-document-system-backend v0.1.0 (/home/jesuslangarica/Proyectos/hcg-document-system/src-tauri)
error: error returned from database: (code: 14) unable to open database file
  --> src/core/audit.rs:54:16
   |
54 | ... = sqlx::query!("SELECT id, accion, detalles as descripcion, fecha_creacion FROM audit_log ORDER BY fecha_creacion DESC LIMIT ?", limit)
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tokio_util`
 --> src/api/documents.rs:7:5
  |
7 | use tokio_util::io::ReaderStream;
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `tokio_util`
  |
  = help: if you wanted to use a crate named `tokio_util`, use `cargo add tokio_util` to add it to your `Cargo.toml`

error[E0432]: unresolved import `jsonwebtoken`
 --> src/api/auth.rs:7:5
  |
7 | use jsonwebtoken::{decode, DecodingKey, Validation};
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `jsonwebtoken`
  |
  = help: if you wanted to use a crate named `jsonwebtoken`, use `cargo add jsonwebtoken` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `base64`
 --> src/workers/ai_worker.rs:5:5
  |
5 | use base64::{Engine as _, engine::general_purpose};
  |     ^^^^^^ use of unresolved module or unlinked crate `base64`
  |
  = help: if you wanted to use a crate named `base64`, use `cargo add base64` to add it to your `Cargo.toml`

error[E0432]: unresolved import `base64`
 --> src/workers/ai_worker.rs:5:5
  |
5 | use base64::{Engine as _, engine::general_purpose};
  |     ^^^^^^ use of unresolved module or unlinked crate `base64`
  |
  = help: if you wanted to use a crate named `base64`, use `cargo add base64` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `reqwest`
   --> src/workers/ai_worker.rs:183:18
    |
183 |     let client = reqwest::Client::new();
    |                  ^^^^^^^ use of unresolved module or unlinked crate `reqwest`
    |
    = help: if you wanted to use a crate named `reqwest`, use `cargo add reqwest` to add it to your `Cargo.toml`

error[E0425]: cannot find type `Arc` in this scope
  --> src/hardware/mod.rs:86:33
   |
86 |     app_state: tauri::State<'_, Arc<crate::AppState>>,
   |                                 ^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 2 + use crate::Arc;
   |
 2 + use std::sync::Arc;
   |

warning: unused import: `SqlitePool`
 --> src/api/search.rs:3:17
  |
3 | use sqlx::{Row, SqlitePool};
  |                 ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `chrono::Local`
 --> src/core/audit.rs:2:5
  |
2 | use chrono::Local;
  |     ^^^^^^^^^^^^^

warning: unused import: `DateTime`
 --> src/core/backup.rs:1:14
  |
1 | use chrono::{DateTime, Local, Timelike};
  |              ^^^^^^^^

warning: unused import: `flate2::write::GzEncoder`
 --> src/core/backup.rs:2:5
  |
2 | use flate2::write::GzEncoder;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src/core/backup.rs:6:17
  |
6 | use std::path::{Path, PathBuf};
  |                 ^^^^

error[E0282]: type annotations needed
  --> src/core/audit.rs:54:16
   |
54 |       let rows = sqlx::query!("SELECT id, accion, detalles as descripcion, fecha_creaci...
   |  ________________^
55 | |         .fetch_all(&state.read_db).await.unwrap_or_default();
   | |________________________________________^ cannot infer type

error[E0282]: type annotations needed
   --> src/workers/ai_worker.rs:184:15
    |
184 |       let res = client.post("http://localhost:1234/v1/chat/completions")
    |  _______________^
185 | |         .json(&payload)
186 | |         .send()
187 | |         .await
    | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> src/workers/ai_worker.rs:188:19
    |
188 |         .map_err(|e| e.to_string())?;
    |                   ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
188 |         .map_err(|e: /* Type */| e.to_string())?;
    |                    ++++++++++++

error[E0282]: type annotations needed
   --> src/workers/ai_worker.rs:190:8
    |
190 |     Ok(res.text().await.unwrap_or_default())
    |        ^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `hcg-document-system-backend` (bin "hcg-document-system-backend") generated 5 warnings
error: could not compile `hcg-document-system-backend` (bin "hcg-document-system-backend") due to 11 previous errors; 5 warnings emitted
